--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,20 +8,21 @@
 @import "./components/mobile-menu";
 @import "./components/header";
 @import "./components/logo";
+@import "./components/contact";
 @import "./components/hero";
 @import "./components/btn-order";
 
-@import "./components/distinctive";
+@import "./components/advantage";
 
-@import "./components/engage";
+@import "./components/making";
 
 @import "./components/employees";
+@import "./components/social";
 
 @import "./components/clients";
 
 @import "./components/footer";
 @import "./components/address";
-@import "./components/company-social";
 
 @import "./components/portfolio-works";
 
