--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -6,39 +6,20 @@
   .advantage {
     display: flex;
     flex-wrap: wrap;
+    gap: 57px 30px;
 
     @media screen and(min-width:1200px) {
       flex-wrap: nowrap;
     }
   }
 }
-@media screen and(max-width:767px) {
-  .advantage__item {
+
+.advantage__item:not(:last-child) {
+  @media screen and(min-width:1200px) {
+    margin-right: 30px;
+  }
+  @media screen and(max-width:767px) {
     margin-bottom: 30px;
-  }
-}
-
-@media screen and(min-width:768px) and (max-width: 1199px) {
-  .advantage__item {
-    width: 354px;
-
-    &:nth-child(2n-1) {
-      margin-right: 20px;
-    }
-    &:nth-child(1) {
-      margin-bottom: 30px;
-    }
-    &:nth-child(2) {
-      margin-bottom: 30px;
-    }
-  }
-}
-@media screen and(min-width:1200px) {
-  .advantage__item {
-    flex-wrap: nowrap;
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
   }
 }
 .advantage__title {
