--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -127,6 +127,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
