--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,8 +1,10 @@
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
-  // padding-top: 94px;
-  // padding-bottom: 94px;
+  @media screen and(min-width:1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .section__title {
