--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -6,20 +6,24 @@
   .advantage {
     display: flex;
     flex-wrap: wrap;
-    gap: 57px 30px;
+    gap: 30px;
 
     @media screen and(min-width:1200px) {
       flex-wrap: nowrap;
     }
   }
 }
-
-.advantage__item:not(:last-child) {
-  @media screen and(min-width:1200px) {
-    margin-right: 30px;
+.advantage__item {
+  @media screen and(min-width:768px) {
+    max-width: 354px;
   }
-  @media screen and(max-width:767px) {
-    margin-bottom: 30px;
+  &:not(:last-child) {
+    @media screen and(min-width:1200px) {
+      margin-right: 30px;
+    }
+    @media screen and(max-width:767px) {
+      margin-bottom: 30px;
+    }
   }
 }
 .advantage__title {
