--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -4,14 +4,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
+  max-width: 450px;
   padding: 40px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  @media screen and(min-width:480px) {
-    width: 450px;
-  }
   @media screen and(min-width:1200px) {
     width: 528px;
   }
