--- a/css/main.css
+++ b/css/main.css
@@ -772,9 +772,6 @@ button {
   }
 }
 
-.footer__block_first {
-  margin-bottom: 60px;
-}
 @media screen and (max-width: 1199px) {
   .footer__block_first {
     text-align: center;
@@ -792,22 +789,25 @@ button {
 }
 
 .footer__block_second {
-  margin-bottom: 60px;
+  margin-top: 60px;
 }
 @media screen and (min-width: 768px) {
   .footer__block_second {
-    margin-bottom: 0;
+    margin-top: 0;
   }
 }
 
+.footer__block_third {
+  margin-top: 60px;
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__block_third {
     width: 450px;
-    margin-top: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer__block_third {
+    margin-top: 0;
     margin-left: auto;
   }
 }
