--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -15,7 +15,7 @@
 }
 
 .footer__block_first {
-  margin-bottom: 60px;
+  // margin-bottom: 60px;
   @media screen and(max-width:1199px) {
     text-align: center;
   }
@@ -27,17 +27,18 @@
   }
 }
 .footer__block_second {
-  margin-bottom: 60px;
+  margin-top: 60px;
   @media screen and(min-width:768px) {
-    margin-bottom: 0;
+    margin-top: 0;
   }
 }
 .footer__block_third {
+  margin-top: 60px;
   @media screen and(min-width:768px) and(max-width:1199px) {
     width: 450px;
-    margin-top: 60px;
   }
   @media screen and(min-width:1200px) {
+    margin-top: 0;
     margin-left: auto;
   }
 }
