--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,8 +1,11 @@
+.backdrop {
+  padding: 10px;
+}
+
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   max-width: 450px;
   padding: 40px;
@@ -10,6 +13,13 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  @media screen and(min-width:768px) {
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
   @media screen and(min-width:1200px) {
     width: 528px;
   }
